fix: don't hide active channel on collapse
Initially, we were hiding all channel elements, but we added another
condition: only hide those channels that DON'T have the active class

Yes, it now feels like programming. You're using something like a
conditional with the :not() pseudo-class

Cool, this reduces the amount of JavaScript you need to use

--- a/styles/channels-sidebar.css
+++ b/styles/channels-sidebar.css
@@ -74,7 +74,7 @@
 		gap: .25rem;
 
 		&.collapsed {
-			.channel {
+			.channel:not(.active) {
 				display: none;
 			}
 
